--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,21 @@
 *.suo
 *.pdb
 *.ilk
+*.manifest
+*.res
+*.obj
+*.dep
+*.idb
+*.htm
+*.user
 
 vs_project/Debug/
 vs_project/Release/
+vs_project/cube/Debug/
+vs_project/cube/Release/
 !vs_project/Release/glut32.dll
 !vs_project/Release/cube.exe
+!vs_project/cube/glut32.dll
+!vs_project/cube/glut32.lib
+!vs_project/cube/glut.lib
 
