--- a/vs_project/cube/cube.vcproj
+++ b/vs_project/cube/cube.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="E:\glutdlls37beta"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)glut\&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -63,7 +63,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="glut32.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="E:\glutdlls37beta"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)glut\&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -117,7 +117,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="E:\glutdlls37beta"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)glut\&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -138,7 +138,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="glut32.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="E:\glutdlls37beta"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)glut\&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
